--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.4",
+    "classnames": "^2.3.1",
+    "dotenv": "^10.0.0",
+    "highlight.js": "^10.4.1",
+    "next": "^12.0.4",
+    "next-i18next": "^10.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.43.4"
   },
   "devDependencies": {
     "eslint": "7.32.0",
