--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   },
   "dependencies": {
     "classnames": "^2.3.1",
+    "disqus-react": "^1.1.2",
     "dotenv": "^10.0.0",
-    "highlight.js": "^10.4.1",
+    "moment": "^2.29.1",
     "next": "^12.0.4",
     "next-i18next": "^10.1.0",
     "react": "17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
+    "react-highlight": "^0.14.0",
     "sass": "^1.43.4"
   },
   "devDependencies": {
